--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,3 +4,8 @@ compatibility_date = "2026-01-16"
 
 [assets]
 directory = "./dist"
+
+[observability]
+[observability.logs]
+enabled = false
+invocation_logs = true
