--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,6 +4,7 @@ compatibility_date = "2026-01-16"
 
 [assets]
 directory = "./dist"
+not_found_handling = "single-page-application"
 
 [observability]
 [observability.logs]
